# elysium-agents

./: .env.example  .gitignore  README.md  logging_config.py  main.py  pyproject.toml  sockets.py
config/: atlas_agent_config_data.py  atlas_agent_models.py  atlas_chat_config.py  atlas_metadata_extraction_models.py  atlas_support_ticket_models.py  atlas_tool_config.py  atlas_tool_models.py  elysium_atlas_s3_config.py  email_ai_agent_models.py  email_department_models.py  email_flow_models.py  email_knowledge_models.py  email_recipient_rules_models.py  email_routing_rules_models.py  email_tool_definition_models.py  email_tools_models.py  email_user_models.py  gmail_models.py  gmail_oauth_config.py  lead_collection_config.py  llm_models_config.py  redis_keys.json  retrieval_strategy_config.py  rooms_taken.py  settings.py  structured_output_models.py  url_filters.py
constants/: email_ticket_status.json
documentation/: backend-team-rbac-guide.md  departments-api.md  email-ai-agent-setup.md  email-auth-login-api.md  email-draft-review-ui.md  email-flow-nodes.md  email-flow-plan.md  email-flow-reprocess-thread-api.md  email-flows-ui.md  email-knowledge-api.md  email-recipient-rules-api.md  email-routing-rules-api.md  email-threads-api.md  email-tools-api.md  frontend-agents-rbac-guide.md  frontend-support-tickets-api-guide.md  frontend-tools-api-guide.md  gmail-oauth-setup.md  team-knowledge-bases-plan.md
jobs/: arq_redis.py  enqueue.py  lifecycle.py  stale_visitor_jobs.py  worker_settings.py
middlewares/: application_passkey_auth.py  jwt_middleware.py  socket_auth.py
(+147 files in other folders)
