[project]
name = "elysium-agents"
version = "0.1.4"
description = "A repository to demonstrate the working of AI Agents for Elysium."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "pyjwt>=2.8.0",
    "redis>=7.1.0",
    "python-socketio>=5.11.0",
]
