[project]
name = "elysium-agents"
version = "0.2.45"
description = "A repository to demonstrate the working of AI Agents for Elysium."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "pyjwt>=2.8.0",
    "redis>=7.1.0",
    "python-socketio>=5.11.0",
    "motor>=3.7.1",
    "qdrant-client>=1.16.1",
    "openai>=1.0.0",
    "groq>=0.9.0",
    "boto3>=1.42.10",
    "anthropic>=0.34.0",
    "docx2txt>=0.9",
    "xai-sdk>=1.5.0",
]
